# velox

./: CHANGELOG.md  CMakeLists.txt  README.md
cmake/: CompilerFlags.cmake  Dependencies.cmake  SIMDDetect.cmake
include/velox/: config.hpp
include/velox/core/: types.hpp
include/velox/sbe/: order_event.hpp
src/: velox.cpp
tests/: CMakeLists.txt  test_smoke.cpp
